Update to 3.0.0-preview5.19227.9 all tests still pass.

--- a/Source/TimeWarp.Console.Template/content/TimeWarp.Console-CSharp/Source/Console-CSharp.csproj
+++ b/Source/TimeWarp.Console.Template/content/TimeWarp.Console-CSharp/Source/Console-CSharp.csproj
@@ -5,15 +5,15 @@
     <OutputPath>..\bin</OutputPath>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <DocumentationFile>..\bin\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
-    <Version>0.0.1</Version>
+    <Version>0.0.2</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="8.4.0" />
     <PackageReference Include="MediatR" Version="6.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="6.0.1" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.0.0-preview5.19227.9" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.0.0-preview5.19227.9" />
     <PackageReference Include="System.CommandLine.Experimental" Version="0.1.0-alpha-63703-04" />
   </ItemGroup>
 
