--- a/Source/TimeWarp.Console.Template/content/TimeWarp.Console-CSharp/Source/Console-CSharp.csproj
+++ b/Source/TimeWarp.Console.Template/content/TimeWarp.Console-CSharp/Source/Console-CSharp.csproj
@@ -14,7 +14,7 @@
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.0.0-preview5.19227.9" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.0.0-preview5.19227.9" />
-    <PackageReference Include="System.CommandLine.Experimental" Version="0.1.0-alpha-63703-04" />
+    <PackageReference Include="System.CommandLine.Experimental" Version="0.2.0-alpha.19174.3" />
   </ItemGroup>
 
 </Project>
