--- a/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Directory.Build.props
+++ b/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Directory.Build.props
@@ -9,6 +9,7 @@
 
   <!-- Common compile parameters -->
   <PropertyGroup>
+    <Nullable>disable</Nullable>
     <LangVersion>preview</LangVersion>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -31,6 +32,7 @@
     <MicrosoftAspNetCoreComponentsBrowserVersion>$(MicrosoftAspNetCoreVersion)</MicrosoftAspNetCoreComponentsBrowserVersion>
     <MicrosoftAspNetCoreMvcNewtonsoftJsonVersion>$(MicrosoftAspNetCoreVersion)</MicrosoftAspNetCoreMvcNewtonsoftJsonVersion>
     <MicrosoftAspNetCoreTestHostVersion>$(MicrosoftAspNetCoreVersion)</MicrosoftAspNetCoreTestHostVersion>
+    <MicrosoftCodeAnalysisFxCopAnalyzersVersion>2.9.4</MicrosoftCodeAnalysisFxCopAnalyzersVersion>
     <MicrosoftExtensionsFileProvidersEmbeddedVersion>3.0.0-preview8.19405.4</MicrosoftExtensionsFileProvidersEmbeddedVersion>
     <MicrosoftExtensionsLoggingAbstractionsVersion>3.0.0-preview8.19405.4</MicrosoftExtensionsLoggingAbstractionsVersion>
     <MicrosoftSourceLinkGitHubVersion>1.0.0-beta2-19414-01</MicrosoftSourceLinkGitHubVersion>
