--- a/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/Api/BlazorHosted-CSharp.Api.csproj
+++ b/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/Api/BlazorHosted-CSharp.Api.csproj
@@ -2,9 +2,16 @@
   <PropertyGroup>
     <Description>Blazor Hosted Api Library</Description>
   </PropertyGroup>
+  
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <CodeAnalysisRuleSet>../../TimeWarp.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="$(MediatrVersion)" />
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="$(MicrosoftCodeAnalysisFxCopAnalyzersVersion)">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
-
 </Project>
