--- a/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Directory.Build.props
+++ b/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Directory.Build.props
@@ -4,7 +4,7 @@
   
   <PropertyGroup>
     <Authors>Steven T. Cramer</Authors>
-    <Product>BlazorHosted-CSharp</Product>
+    <Product>TimeWarp.Blazor</Product>
   </PropertyGroup>
 
   <!-- Common compile parameters -->
