--- a/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/Server/TimeWarp.Blazor.Server.csproj
+++ b/Source/Blazor.Hosted/content/TimeWarp.BlazorHosted-CSharp/Source/Server/TimeWarp.Blazor.Server.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <Description>BlazorHosted-CSharp Server</Description>
+    <Description>TimeWarp.Blazor Server</Description>
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
