Update yml and more directory refernces all tests pass I think we are good to go.

--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/TimeWarp.Blazor.Client.csproj
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Client/TimeWarp.Blazor.Client.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <Description>Blazor Hosted Client</Description>
+    <Description>TimeWarp Blazor Client</Description>
     <RazorLangVersion>3.0</RazorLangVersion>
   </PropertyGroup>
 
