--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Api/TimeWarp.Blazor.Api.csproj
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Source/Api/TimeWarp.Blazor.Api.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Description>Blazor Hosted Api Library</Description>
+    <Description>TimeWarp Api Library</Description>
   </PropertyGroup>
   
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
