--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Directory.Build.props
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Directory.Build.props
@@ -36,8 +36,8 @@
     <MicrosoftExtensionsFileProvidersEmbeddedVersion>3.0.0-preview8.19405.4</MicrosoftExtensionsFileProvidersEmbeddedVersion>
     <MicrosoftExtensionsLoggingAbstractionsVersion>3.0.0-preview8.19405.4</MicrosoftExtensionsLoggingAbstractionsVersion>
     <MicrosoftSourceLinkGitHubVersion>1.0.0-beta2-19414-01</MicrosoftSourceLinkGitHubVersion>
-
-    <BlazorStateVersion>1.0.0-preview8.19405.7-20190817-213328</BlazorStateVersion>
+    
+    <BlazorStateVersion>1.0.0-3.0.100-preview8-013656-112</BlazorStateVersion>
     <BlazorExtensionsLoggingVersion>0.3.0</BlazorExtensionsLoggingVersion>
     <FixieVersion>2.1.1</FixieVersion>
     <FixieConsoleVersion>2.1.1</FixieConsoleVersion>
