Remove the dot from the directory to see if this is what causes the problem when served from GHPages.
Fix Uid in toc.yml also

--- a/Documentation/toc.yml
+++ b/Documentation/toc.yml
@@ -2,4 +2,4 @@
 - name: TimeWarp-Blazor Template Overview
   topicUid: TimeWarp.Blazor.Template:Overview
 - name: TimeWarp-Console Template Overview
-  topicUid: TimeWarp.Blazor.Console:Overview
+  topicUid: TimeWarp.Console.Template:Overview
