--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -3,7 +3,7 @@ sorted: true
 references:
 - uid: TimeWarp.Blazor.Template:Overview
   name: TimeWarp Blazor Template Overview
-  href: TimeWarp.Blazor.Template/Overview.html
+  href: TimeWarpBlazorTemplate/Overview.html
 - uid: TimeWarp.Console.Template:Overview
   name: TimeWarp Console Template Overview
-  href: TimeWarp.Console.Template/Overview.html
+  href: TimeWarpConsoleTemplate/Overview.html
