--- a/manifest.json
+++ b/manifest.json
@@ -34,7 +34,7 @@
           "hash": "elzxO6mRFs0keJOPTwHfgQ=="
         }
       },
-      "is_incremental": false,
+      "is_incremental": true,
       "version": ""
     },
     {
@@ -46,7 +46,7 @@
           "hash": "9rhrN4hGFtg1MmYnlOk1qA=="
         }
       },
-      "is_incremental": false,
+      "is_incremental": true,
       "version": ""
     },
     {
@@ -55,7 +55,7 @@
       "output": {
         ".html": {
           "relative_path": "TimeWarpBlazorTemplate/Overview.html",
-          "hash": "f71jd/J0+t1/FuA3ytxBAA=="
+          "hash": "RyhWYW/1eFIgFxiuZeWbXw=="
         }
       },
       "is_incremental": false,
@@ -70,7 +70,7 @@
           "hash": "MeLngePdSwHPPaR1pmo+VA=="
         }
       },
-      "is_incremental": false,
+      "is_incremental": true,
       "version": ""
     },
     {
@@ -79,7 +79,7 @@
       "output": {
         ".html": {
           "relative_path": "index.html",
-          "hash": "1W7kwPhd0Ee0WKSetAZa/Q=="
+          "hash": "wRGKtMpF+6RF/osc7Ap1YA=="
         }
       },
       "is_incremental": false,
@@ -125,7 +125,7 @@
           "can_incremental": true,
           "incrementalPhase": "build",
           "total_file_count": 5,
-          "skipped_file_count": 2
+          "skipped_file_count": 3
         }
       }
     },
