--- a/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Directory.Build.props
+++ b/Source/TimeWarp.Blazor.Template/content/TimeWarp.Blazor/Directory.Build.props
@@ -1,4 +1,3 @@
-<!-- Intentionally empty to isolate templates projects from the rest of the repo -->
 <Project>
   <!-- Set common properties regarding assembly information and nuget packages -->
   
@@ -24,16 +23,16 @@
 
   <!--Versions of packages used across the solution-->
   <PropertyGroup Label="Package Versions">
-    <MicrosoftAspNetCoreVersion>3.0.0-rc1.19457.4</MicrosoftAspNetCoreVersion>
-    <MicrosoftAspNetCoreBlazorVersion>3.0.0-preview9.19457.4</MicrosoftAspNetCoreBlazorVersion>
-    <MicrosoftAspNetCoreBlazorBuildVersion>3.0.0-preview9.19457.4</MicrosoftAspNetCoreBlazorBuildVersion>
-    <MicrosoftAspNetCoreBlazorHttpClientVersion>3.0.0-preview9.19457.4</MicrosoftAspNetCoreBlazorHttpClientVersion>
-    <MicrosoftAspNetCoreBlazorServerVersion>3.0.0-preview9.19457.4</MicrosoftAspNetCoreBlazorServerVersion>
+    <MicrosoftAspNetCoreVersion>3.0.0</MicrosoftAspNetCoreVersion>
+    <MicrosoftAspNetCoreBlazorVersion>3.0.0-preview9.19465.2</MicrosoftAspNetCoreBlazorVersion>
+    <MicrosoftAspNetCoreBlazorBuildVersion>3.0.0-preview9.19465.2</MicrosoftAspNetCoreBlazorBuildVersion>
+    <MicrosoftAspNetCoreBlazorHttpClientVersion>3.0.0-preview9.19465.2</MicrosoftAspNetCoreBlazorHttpClientVersion>
+    <MicrosoftAspNetCoreBlazorServerVersion>3.0.0-preview9.19465.2</MicrosoftAspNetCoreBlazorServerVersion>
     <MicrosoftAspNetCoreMvcNewtonsoftJsonVersion>$(MicrosoftAspNetCoreVersion)</MicrosoftAspNetCoreMvcNewtonsoftJsonVersion>
     <MicrosoftAspNetCoreTestHostVersion>$(MicrosoftAspNetCoreVersion)</MicrosoftAspNetCoreTestHostVersion>
     <MicrosoftCodeAnalysisFxCopAnalyzersVersion>2.9.4</MicrosoftCodeAnalysisFxCopAnalyzersVersion>
 
-    <BlazorStateVersion>1.0.0-3.0.100-rc1-014190-100</BlazorStateVersion>
+    <BlazorStateVersion>1.0.0</BlazorStateVersion>
     <BlazorExtensionsLoggingVersion>0.4.0</BlazorExtensionsLoggingVersion>
     <FixieVersion>2.1.1</FixieVersion>
     <FixieConsoleVersion>2.1.1</FixieConsoleVersion>
