--- a/manifest.json
+++ b/manifest.json
@@ -34,7 +34,7 @@
           "hash": "tYtNHge37dL1IbLPX6Jfkw=="
         }
       },
-      "is_incremental": false,
+      "is_incremental": true,
       "version": ""
     },
     {
@@ -51,6 +51,18 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "TimeWarpBlazorTemplate/Features.md",
+      "output": {
+        ".html": {
+          "relative_path": "TimeWarpBlazorTemplate/Features.html",
+          "hash": "CJOkKQV//CuByLHGdmkh9w=="
+        }
+      },
+      "is_incremental": true,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "TimeWarpBlazorTemplate/Overview.md",
       "output": {
         ".html": {
@@ -58,7 +70,7 @@
           "hash": "RZrYW2R2NIZ5fomYZNep/Q=="
         }
       },
-      "is_incremental": false,
+      "is_incremental": true,
       "version": ""
     },
     {
@@ -82,7 +94,7 @@
           "hash": "9pUEASt9VF3ANizplEHbTw=="
         }
       },
-      "is_incremental": false,
+      "is_incremental": true,
       "version": ""
     },
     {
@@ -107,13 +119,6 @@
         "skipped_file_count": 0
       },
       "processors": {
-        "ResourceDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor ResourceDocumentProcessor cannot support incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
-          "incrementalPhase": "build",
-          "total_file_count": 0,
-          "skipped_file_count": 0
-        },
         "TocDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor TocDocumentProcessor cannot support incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
@@ -121,11 +126,18 @@
           "total_file_count": 0,
           "skipped_file_count": 0
         },
+        "ResourceDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor ResourceDocumentProcessor cannot support incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build",
+          "total_file_count": 0,
+          "skipped_file_count": 0
+        },
         "ConceptualDocumentProcessor": {
           "can_incremental": true,
           "incrementalPhase": "build",
-          "total_file_count": 5,
-          "skipped_file_count": 2
+          "total_file_count": 6,
+          "skipped_file_count": 6
         }
       }
     },
